# FlowerBox

./: .gitignore  .gitmodules  CMakeLists.txt  INVARIANTS.txt  Makefile  README.md  TODO  init.bat  partitions.csv  partitions8266.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  component.mk  fb_adc.cpp  fb_battery.cpp  fb_clock.cpp  fb_dmx_hal.cpp  fb_event_manager.cpp  fb_expander_matrix.cpp  fb_file_system.cpp  fb_globals.cpp  fb_http_puller.cpp  fb_http_puller32.cpp  fb_http_request.cpp  fb_http_server.cpp  fb_i2c.cpp  fb_ir_reader.cpp  fb_ir_transmitter.cpp  fb_keyboard_handler.cpp  fb_mqtt_client.cpp  fb_pins.cpp  fb_provision.cpp  fb_service_iface.cpp  fb_settings.cpp  fb_sleep.cpp  fb_state_booted.cpp  fb_state_initialized.cpp  fb_state_manager.cpp  fb_time.cpp  fb_time_scheduler.cpp  fb_uart.cpp  fb_update.cpp  fb_wifi.cpp  fb_wrapper_db135.cpp  fb_wrapper_i2c_gpio.cpp  fb_wrappers.cpp  h_keyboard.cpp  main.cpp
main/box/: fb_box.cpp  fb_box_service.cpp  fb_data_entry.cpp  fb_object_base.cpp  fb_property.cpp  fb_sensor.cpp  fb_switch.cpp  fb_tid.cpp
main/core/: fb_core_mapper_obj.cpp
main/df_player/: fb_df_player.cpp
main/green_house/: fb_project_box_obj.cpp  fb_project_core.cpp  fb_project_maper_obj.cpp  fb_project_settings.cpp
main/include/: fb_adc.hpp  fb_battery.hpp  fb_buffer.hpp  fb_clock.hpp  fb_cycle_buffer.hpp  fb_debug.hpp  fb_dmx_hal.hpp  fb_dynamic_str_constructor.hpp  fb_event_manager.hpp  fb_expander_matrix.hpp  fb_file_system.hpp  fb_globals.hpp  fb_http_puller.hpp  fb_http_puller_32.hpp  fb_http_request.hpp  fb_http_server.hpp  fb_i2c.hpp  fb_id.hpp  fb_ir_commands.hpp  fb_ir_reader.hpp  fb_ir_transmitter.hpp  fb_json_util.hpp  fb_keyboard_handler.hpp  fb_lock_wrapper.hpp  fb_mqtt_client.hpp  fb_nvs.hpp  fb_pins.hpp  fb_project_core.hpp  fb_provision.hpp  fb_service_iface.hpp  fb_settings.hpp  fb_sleep.hpp  fb_state_booted.hpp  fb_state_initialized.hpp  fb_state_manager.hpp  fb_storage.hpp  fb_subject.hpp  fb_time.hpp  fb_time_scheduler.hpp  fb_uart.hpp  (+7 more)
main/include/box/: fb_box.hpp  fb_box_service.hpp  fb_data_entry.hpp  fb_object_base.hpp  fb_property.hpp  fb_sensor.hpp  fb_serializable.hpp  fb_switch.hpp  fb_tid.hpp
main/include/core/: fb_core.hpp  fb_core_hw_obj.hpp  fb_core_maper_obj.hpp
main/include/df_player/: fb_df_player.hpp
main/include/green_house/: fb_green_house_box_obj.hpp  fb_green_house_hw_obj.hpp
main/include/project/: fb_pins.hpp  fb_project_box_obj.hpp  fb_project_hw_obj.hpp  fb_project_maper_obj.hpp  fb_project_settings.hpp
main/include/project2/: fb_http_puller.hpp  fb_pins.hpp  fb_project_box_obj.hpp  fb_project_core.hpp  fb_project_hw_obj.hpp  fb_project_maper_obj.hpp
main/include/project_sticks/: fb_pins.hpp  fb_project_box_obj.hpp  fb_project_maper_obj.hpp  fb_project_settings.hpp  fb_stick_handler.hpp
main/include/relay_project/: fb_pins.hpp  fb_project_hw_obj.hpp
main/include/sensors/: ds18b20.h  fb_sensor_aht20.hpp  fb_sensor_event.hpp  fb_sensor_iface.hpp  fb_sensor_keyboard.hpp  fb_sensor_mp3.hpp  fb_sensor_service.hpp  fb_sensor_storage.hpp  fb_sensor_store_service.hpp  fb_sensor_temperature.hpp
main/include/servers/: fb_server.hpp  fb_server_box.hpp  fb_server_builder.hpp  fb_server_debug.hpp  fb_server_html.hpp  fb_server_log.hpp  fb_server_provision.hpp  fb_server_update.hpp
main/include/states/: fb_state_booted.hpp  fb_state_manager.hpp  fb_state_sensor_init.hpp  fb_state_time_init.hpp  fb_state_wifi_connect.hpp  fb_state_wifi_connected.hpp
main/include/storage/: fb_nvs_storage.hpp  fb_ram_storage.hpp  fb_storage.hpp
main/include/switches/: fb_gpio_switch.hpp  fb_heat_switch.hpp  fb_mp3_switch.hpp  fb_rgb_switch.hpp  fb_switch_iface.hpp  fb_switch_service.hpp  fb_time_switch.hpp
main/include/templates/: TODO  fb_templates.hpp
main/project/: fb_project_box_obj.cpp  fb_project_core.cpp  fb_project_hw_obj.cpp  fb_project_maper_obj.cpp  fb_project_settings.cpp
main/project2/: fb_http_puller.cpp  fb_project_box_obj.cpp  fb_project_core.cpp  fb_project_hw_obj.cpp  fb_project_maper_obj.cpp
main/project_sticks/: fb_project_box_obj.cpp  fb_project_core.cpp  fb_project_hw_obj.cpp  fb_project_maper_obj.cpp  fb_project_settings.cpp
main/projects/cipher_box/: fb_cipher_box_box_obj.cpp  fb_cipher_box_core.cpp  fb_cipher_box_hw_obj.cpp  fb_cipher_box_mapper_obj.cpp  fb_cipher_box_settings.cpp
main/projects/dmx_light/: fb_dmx_light_settings.cpp  fb_project_box_obj.cpp  fb_project_core.cpp  fb_project_hw_obj.cpp  fb_project_maper_obj.cpp
main/projects/green_house/: fb_project_box_obj.cpp  fb_project_core.cpp  fb_project_hw_obj.cpp  fb_project_maper_obj.cpp
main/projects/ir/: fb_ir_box_obj.cpp  fb_ir_core.cpp  fb_ir_hw_obj.cpp  fb_ir_mapper_obj.cpp  fb_ir_settings.cpp
main/projects/keypad_backlight/: fb_keypad_backlight_box_obj.cpp  fb_keypad_backlight_core.cpp  fb_keypad_backlight_hw_obj.cpp  fb_keypad_backlight_mapper_obj.cpp  fb_keypad_backlight_settings.cpp
main/projects/relay/: fb_project_box_obj.cpp  fb_project_core.cpp  fb_project_hw_obj.cpp  fb_project_maper_obj.cpp  fb_project_settings.cpp  fb_relay_settings.cpp
main/relay_project/: fb_project_box_obj.cpp  fb_project_core.cpp  fb_project_hw_obj.cpp  fb_project_maper_obj.cpp  fb_project_settings.cpp
main/sensors/: fb_sensor_aht20.cpp  fb_sensor_iface.cpp  fb_sensor_keyboard.cpp  fb_sensor_mp3.cpp  fb_sensor_service.cpp  fb_sensor_storage.cpp  fb_sensor_store_service.cpp  fb_sensor_temperature.cpp
main/servers/: fb_server.cpp  fb_server_box.cpp  fb_server_builder.cpp  fb_server_debug.cpp  fb_server_html.cpp  fb_server_update.cpp
main/states/: fb_state_booted.cpp  fb_state_manager.cpp  fb_state_sensor_init.cpp  fb_state_time_init.cpp  fb_state_wifi_connect.cpp  fb_state_wifi_connected.cpp
main/storage/: fb_nvs_storage.cpp  fb_ram_storage.cpp
main/switches/: fb_gpio_switch.cpp  fb_heat_switch.cpp  fb_mp3_switch.cpp  fb_rgb_switch.cpp  fb_switch_iface.cpp  fb_switch_service.cpp  fb_time_switch.cpp
main/templates/: fb_templates.cpp
main/tests/: test_clock.cpp  test_engine.cpp  test_query.cpp
(+125 files in other folders)
