idf_component_register(
	SRCS 
		"fb_clock.cpp"
		"fb_event_manager.cpp"
		"fb_file_system.cpp"
		"fb_globals.cpp"
		"fb_http_server.cpp"
		"fb_pins.cpp"
		"fb_update.cpp"
		"fb_settings.cpp"
		"fb_wifi.cpp"
		"fb_service_iface.cpp"
		"main.cpp"
		"box/fb_box.cpp"
		"box/fb_property.cpp"
		"box/fb_sensor.cpp"
		"box/fb_switch.cpp"
		"box/fb_data_entry.cpp"
		"box/fb_box_service.cpp"
		"box/fb_object_base.cpp"
		"box/fb_tid.cpp"
		"sensors/fb_sensor_iface.cpp"
		"sensors/fb_sensor_temperature.cpp"
		"sensors/fb_sensor_service.cpp"
		"sensors/fb_sensor_storage.cpp"
		"servers/fb_server.cpp"
		"servers/fb_server_builder.cpp"
		"servers/fb_server_update.cpp"
		"servers/fb_server_html.cpp"
		"servers/fb_server_box.cpp"
		"states/fb_state_manager.cpp"
		"states/fb_main_state_manager.cpp"
		"states/fb_state_sensor_init.cpp"
		"states/boot/fb_state_booted.cpp"
		"states/boot/fb_state_hw_init.cpp"
		"states/boot/fb_state_wifi_init.cpp"
		"states/boot/fb_state_time_init.cpp"
		"states/work/fb_state_work.cpp"
		"states/work/fb_state_wifi_connected.cpp"
		"states/update/fb_state_update.cpp"
		"switches/fb_switch_iface.cpp"
		"switches/fb_heat_switch.cpp"
		"switches/fb_time_switch.cpp"
		"switches/fb_switch_service.cpp"

    INCLUDE_DIRS
		"include"
		"include/box"
		"include/sensors"
		"include/switches"
		"include/servers"
		"include/states"
		"include/states/boot"
		"include/states/work"
		"include/states/update"
		)

spiffs_create_partition_image(storage ../spiffs_image FLASH_IN_PROJECT)